--- a/src/app/components/post-feed/post-feed.html
+++ b/src/app/components/post-feed/post-feed.html
@@ -7,6 +7,7 @@
     
 </head>
 <body>
+    <h1>Anuncios</h1>
     <div class="platform-container">
         <!-- Contenido principal -->
         <div class="post-feed-container">
@@ -26,7 +27,7 @@
             <div class="post-feed">
                 <div class="create-post">
                     <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Usuario" style="width: 40px; height: 40px; border-radius: 50%;">
-                    <input type="text" class="post-input" placeholder="Comparte un anuncio, tutoría o recurso...">
+                    <input type="text" class="post-input" placeholder="Comparte un anuncio">
                 </div>
                 
                 <div class="post">
