--- a/src/app/components/post-feed/post-feed.scss
+++ b/src/app/components/post-feed/post-feed.scss
@@ -6,7 +6,9 @@
             --light: #F7F7F7;
             --accent: #C73E1D;
         }
-        
+        h1 {
+  text-align: center;
+}
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
