--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,6 +4,7 @@
   <div class="navbar-container">
     <a routerLink="/" class="navbar-logo">CEUTEC</a>
     <ul class="navbar-menu">
+       <li class="navbar-item important"><a routerLink="/home" class="navbar-link">Inicio</a></li>
       <li class="navbar-item important"><a routerLink="/post-feed" class="navbar-link">Anuncios</a></li>
       <li class="navbar-item important"><a routerLink="/tutorias-feed" class="navbar-link">Tutorías</a></li>
     </ul>
