Navegacion de postfeed a postform

--- a/src/app/components/post-feed/post-feed.html
+++ b/src/app/components/post-feed/post-feed.html
@@ -27,7 +27,8 @@
             <div class="post-feed">
                 <div class="create-post">
                     <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Usuario" style="width: 40px; height: 40px; border-radius: 50%;">
-                    <input type="text" class="post-input" placeholder="Comparte un anuncio">
+                    <input type="text" class="post-input" placeholder="Comparte un anuncio" routerLink="/post-form" readonly >
+                    
                 </div>
                 
                 <div class="post">
