Modificar Anuncio Postfeed

--- a/src/app/components/post-feed/post-feed.html
+++ b/src/app/components/post-feed/post-feed.html
@@ -51,6 +51,7 @@
     <button (click)="eliminarAnuncio(anuncio.uuid)" class="delete-btn">
       🗑️ Eliminar Post
     </button>
+    <button  (click)="editarAnuncio(anuncio)" >✏️ Editar</button>
   </div>
 </div>
 } @empty {
