--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,6 +7,7 @@
        <li class="navbar-item important"><a routerLink="/home" class="navbar-link">Inicio</a></li>
       <li class="navbar-item important"><a routerLink="/post-feed" class="navbar-link">Anuncios</a></li>
       <li class="navbar-item important"><a routerLink="/tutorias-feed" class="navbar-link">Tutorías</a></li>
+      <li class="navbar-item important"><a routerLink="/eventos-feed" class="navbar-link">Eventos</a></li>
     </ul>
   </div>
 </nav>
