--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,6 +10,11 @@
       <li class="navbar-item important"><a routerLink="/eventos-feed" class="navbar-link">Eventos</a></li>
     </ul>
   </div>
+  <div>
+    <button type="button" routerLink="" class="cancel-btn">
+    Cerrar Sesión
+  </button>
+  </div>
 </nav>
 
 
