--- a/src/app/components/post-feed/post-feed.html
+++ b/src/app/components/post-feed/post-feed.html
@@ -6,7 +6,7 @@
     <title>Feed Universitario</title>
 </head>
 <body>
-    <h1>Anuncios</h1>
+    <h1>Anuncios 📢</h1>
     <div class="platform-container">
         <!-- Contenido principal -->
         <div class="post-feed-container">
@@ -64,5 +64,11 @@
         
         
     </div>
+    <footer>
+        <p>&copy; 2025 Portal Universitario CEUTEC - Todos los derechos reservados.</p>
+        <div class="social-links">
+            
+        </div>
+    </footer>
 </body>
 </html>
