--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -24,11 +24,11 @@
                         <label for="password">Contraseña</label>
                         <input type="password" id="password" placeholder="••••••••">
                     </div>
-                    <button type="submit" class="login-btn">Ingresar</button>
+                    <button routerLink="/home" type="submit" class="login-btn">Ingresar</button>
                 </form>
             </div>
             <div class="card-footer">
-                <p>¿No tienes una cuenta? <a href="#">Regístrate</a></p>
+              
             </div>
         </div>
     </div>
