--- a/src/app/components/tutorias-feed/tutorias-feed.html
+++ b/src/app/components/tutorias-feed/tutorias-feed.html
@@ -7,7 +7,7 @@
    
 </head>
 <body>
-    <h1>Tutorías</h1>
+    <h1>Tutorías 🧑🏻‍🏫</h1>
     <div class="main-content">
         <div class="header">
             <div class="search-bar">
