--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -63,11 +63,11 @@
 /* Destacar Anuncios y Tutorías */
 .navbar-item.important .navbar-link {
   font-weight: bold;
-  color: #f1c40f;
+  color: white;
 }
 
 .navbar-item.important .navbar-link.router-link-active {
-  color: #e67e22;
+  color: whitesmoke;
 }
 
 /* Indicador visual para ruta activa */
