--- a/src/app/components/post-feed/post-feed.html
+++ b/src/app/components/post-feed/post-feed.html
@@ -34,7 +34,7 @@
              @for (anuncio of anuncios; track anuncio.uuid) {
 <div class="post">
   <div class="post-header">
-    <img src="https://via.placeholder.com/50" alt="Usuario" class="post-avatar">
+    <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Usuario" class="post-avatar">
     <div>
       <div class="post-user">{{ anuncio.nombre }} (@{{ anuncio.usuario }})</div>
       <div class="post-meta">{{ formatDate(anuncio.fechaHora) }}</div>
