--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -8,21 +8,26 @@
    
 </head>
 <body>
+    <div class="headerone">
+        
+        <br>
+    </div>
     <div class="container">
         <div class="card">
             <div class="card-header">
-                <h1>Iniciar Sesión</h1>
+                <h1>Portal Informativo</h1>
+                <h3>Iniciar Sesión</h3>
                 <p>Bienvenido de nuevo</p>
             </div>
             <div class="card-body">
                 <form>
                     <div class="form-group">
                         <label for="email">Correo Electrónico</label>
-                        <input type="email" id="email" placeholder="tu@email.com">
+                        <input type="email" id="email" placeholder="Ingrese su Correo">
                     </div>
                     <div class="form-group">
                         <label for="password">Contraseña</label>
-                        <input type="password" id="password" placeholder="••••••••">
+                        <input type="password" id="password" placeholder="Contraseña">
                     </div>
                     <button routerLink="/home" type="submit" class="login-btn">Ingresar</button>
                 </form>
