--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -69,7 +69,7 @@
 .navbar-item.important .navbar-link.router-link-active {
   color: whitesmoke;
 }
-
+//
 /* Indicador visual para ruta activa */
 .navbar-link.router-link-active::after {
   content: '';
