--- a/src/app/components/post-feed/post-feed.html
+++ b/src/app/components/post-feed/post-feed.html
@@ -49,7 +49,7 @@
   <!-- Botones de acciones -->
   <div class="post-actions">
     <button (click)="eliminarAnuncio(anuncio.uuid)" class="delete-btn">
-      🗑️ Eliminar Post
+      🗑️ Eliminar
     </button>
     <button  (click)="editarAnuncio(anuncio)" >✏️ Editar</button>
   </div>
