Imagnes en linea

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,6 +3,9 @@
 <nav class="navbar">
   <div class="navbar-container">
     <a routerLink="/" class="navbar-logo">CEUTEC</a>
+    <div class="imagenHome">
+             <img src="https://www.unitec.edu/res/img/logo-unitec-blanco.webp?v=1.0.1" alt="Texto alternativo">
+        </div>
     <ul class="navbar-menu">
        <li class="navbar-item important"><a routerLink="/home" class="navbar-link">Inicio</a></li>
       <li class="navbar-item important"><a routerLink="/post-feed" class="navbar-link">Anuncios</a></li>
