--- a/src/app/components/login/login.scss
+++ b/src/app/components/login/login.scss
@@ -121,6 +121,13 @@
 
 
 
+ .imagenHome img {
+    max-width: 170px;  /* Nunca más ancha que 400px */
+    width: 100%;       /* Ocupa el 100% del contenedor */
+    height: auto;
+  }
+
+
 
 
         
