--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -15,9 +15,12 @@
     <div class="container">
         <div class="card">
             <div class="card-header">
+                <div class="imagenHome">
+             <img src="https://www.unitec.edu/res/img/logo-unitec-blanco.webp?v=1.0.1" alt="Texto alternativo">
+        </div>
                 <h1>Portal Informativo</h1>
-                <h3>Iniciar Sesión</h3>
-                <p>Bienvenido de nuevo</p>
+            
+                <p>Iniciar Sesión</p>
             </div>
             <div class="card-body">
                 <form>
